test/spec_vectors/simd_i64x2_arith/fail/module_5.wat
(module (func $i64x2.neg-arg-empty (result v128) (i64x2.neg)))